--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: npm
+      - name: Build Tailwind CSS
+        run: |
+          npm ci
+          npm run build:css
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
