--- a/src/AudioSharp.App/AudioSharp.App.csproj
+++ b/src/AudioSharp.App/AudioSharp.App.csproj
@@ -8,6 +8,10 @@
     <UserSecretsId>fbfe370d-f793-4cce-89c2-2670009e0e61</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <RepositoryRoot>$([System.IO.Path]::GetFullPath('$(MSBuildProjectDirectory)/../..'))</RepositoryRoot>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.1" />
     <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.14.0" />
@@ -15,5 +19,11 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.14.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.14.0" />
   </ItemGroup>
+
+  <Target Name="BuildTailwindCss" BeforeTargets="Publish" Condition="'$(SkipTailwindCss)' != 'true'">
+    <Message Importance="high" Text="Building Tailwind CSS..." />
+    <Exec Command="npm ci" WorkingDirectory="$(RepositoryRoot)" Condition="!Exists('$(RepositoryRoot)/node_modules')" />
+    <Exec Command="npm run build:css" WorkingDirectory="$(RepositoryRoot)" />
+  </Target>
 
 </Project>
