--- a/src/AudioSharp.App/appsettings.Development.json
+++ b/src/AudioSharp.App/appsettings.Development.json
@@ -13,7 +13,8 @@
     "TextModel": "local-model"
   },
   "Recording": {
-    "MaxSeconds": 60
+    "MaxSeconds": 60,
+    "MaxAudioBytes": 26214400
   },
   "FhirServer": {
     "BaseUrl": "",
