--- a/src/AudioSharp.App/appsettings.json
+++ b/src/AudioSharp.App/appsettings.json
@@ -31,7 +31,8 @@
     "ObservationCodeDisplay": ""
   },
   "Recording": {
-    "MaxSeconds": 60
+    "MaxSeconds": 60,
+    "MaxAudioBytes": 26214400
   },
   "FhirServer": {
     "BaseUrl": "",
