Address PR feedback for assets and config

--- a/.editorconfig
+++ b/.editorconfig
@@ -22,6 +22,7 @@ generated_code = true
 
 # C# files
 [*.cs]
+charset = utf-8
 # New line preferences
 csharp_new_line_before_open_brace = all
 csharp_new_line_before_else = true
