--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,14 @@ npm-debug.log
 *.db-wal
 *.db-shm
 src/AudioSharp.App/wwwroot/lib/recordrtc/
+
+# Visual Studio / Rider
+.vs/
+.idea/
+*.user
+*.suo
+*.log
+
+# Test results
+TestResults/
+coverage/
