--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,9 @@ jobs:
         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
       - name: Build image
         run: docker build -t ${{ env.IMAGE }} .
+      - name: Verify static assets in image
+        run: |
+          docker run --rm --entrypoint sh ${{ env.IMAGE }} -c "test -f /app/wwwroot/_framework/blazor.web.js && test -f /app/wwwroot/lib/recordrtc/recordrtc.min.js"
       - name: Push image
         run: docker push ${{ env.IMAGE }}
       - name: Deploy
